<resources>
  <string name="app_name">NotesApp</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="title_activity_add_note">AddNoteActivity</string>
  <string name="addNote">Add Note</string>
  <string name="notes">Notes</string>
  <string name="addPhoto">Add Photo</string>
  <string name="addVoiceNote">Add Voice Note</string>
  <string name="save">SAVE</string>
  <string name="viewNote">View Note</string>
  <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
  <string name="delete">Delete</string>
  <string name="edit">Edit</string>
  <string name="title_activity_view_note">ViewNoteActivity</string>
  <string name="title_activity_record_audio">RecordAudioActivity</string>
  <string name="recordVoice">Record Voice Note</string>
</resources>
