<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="io.github.owuor91.notesapp.ui.ViewNoteActivity"
    >

  <android.support.design.widget.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay"
      >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/viewNote"
          android:textColor="@android:color/white"
          android:textSize="@dimen/toolbarTitleTextSize"
          />
    </android.support.v7.widget.Toolbar>

  </android.support.design.widget.AppBarLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="@dimen/defaultMargin"
      android:layout_marginRight="@dimen/defaultMargin"
      android:layout_marginTop="@dimen/defaultMargin"
      android:orientation="vertical"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >

    <TextView
        android:id="@+id/tvNoteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textSize="@dimen/textLG"
        />

    <ImageView
        android:id="@+id/imgNote"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/marginSM"
        android:scaleType="fitCenter"
        android:src="@drawable/imgplaceholder"
        />

    <TextView
        android:id="@+id/tvNoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginSM"
        android:text="@string/loremIpsum"
        />

    <TextView
        android:id="@+id/tvGpsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginTiny"
        android:text="Note Taken From"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginLG"
        >
      <ImageView
          android:id="@+id/imgGpsIcon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/marginSM"
          android:src="@drawable/ic_my_location_black_48dp"
          />

      <TextView
          android:id="@+id/tvLongitude"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/marginSM"
          android:layout_toRightOf="@+id/imgGpsIcon"
          android:text="Longitude: 45.7838624"
          />

      <TextView
          android:id="@+id/tvLatitude"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/tvLongitude"
          android:layout_toRightOf="@+id/imgGpsIcon"
          android:text="Latitude: -1.4738383"
          />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
      <ImageView
          android:id="@+id/imgPlay"
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:src="@drawable/ic_play_circle_outline_blue_48dp"
          />
      <SeekBar
          android:id="@+id/seekBar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />
    </LinearLayout>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="bottom"
      android:orientation="horizontal"
      android:padding="@dimen/defaultMargin"
      >
    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/tvNoteItemEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/marginLG"
        android:drawableLeft="@drawable/ic_mode_edit_blue_24dp"
        android:gravity="center_vertical"
        android:text="@string/edit"
        />

    <TextView
        android:id="@+id/tvNoteItemDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_delete_forever_blue_24dp"
        android:gravity="center_vertical"
        android:text="@string/delete"
        />

  </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
